--- a/src/css/ListPage.scss
+++ b/src/css/ListPage.scss
@@ -33,8 +33,20 @@
 
   .content {
     padding: 10px;
-    max-height: 400px;
+    max-height: 600px;
     overflow: scroll;
+
+    .list-group-item {
+      border: none;
+      border-bottom: 1px solid #e7e7e7;
+
+    }
+
+    .list-group-item.active {
+      background: none;
+      color: red;
+      border: none;
+    }
 
     .input-wrapper {
       display: flex;
@@ -196,8 +208,10 @@
 
     min-width: auto;
   }
-  .product-item-wrapper table{font-size: 10px}
-  .product-item-wrapper .item-img img ,.product-item-wrapper .item-img{
+  .product-item-wrapper table {
+    font-size: 10px
+  }
+  .product-item-wrapper .item-img img, .product-item-wrapper .item-img {
     width: 80px;
     height: 80px;
   }
