--- a/src/css/ListPage.scss
+++ b/src/css/ListPage.scss
@@ -42,6 +42,10 @@
 
     }
 
+    .list-category-item {
+      cursor: pointer;
+    }
+
     .list-group-item.active {
       background: none;
       color: red;
